# eulerian-video-magnification

./: CMakeLists.txt  README.md
ext/: externals.cmake
lib/: CMakeLists.txt
lib/evm/: CMakeLists.txt  Doxyfile
lib/evm/include/evm/: color_converter.hpp  data.hpp  evm.hpp  macro_definition.hpp  worker.hpp
lib/evm/include/evm/capture/: capture.hpp  device_source.hpp  selector.hpp  source.hpp  stabilizer.hpp
lib/evm/include/evm/evm/: amplifier.hpp  data.hpp  display_subscriber.hpp  evm.hpp  gaussian_pyramid.hpp  gaussian_spatial_filter.hpp  ideal_bandpass_temporal_filter.hpp  laplace_pyramid.hpp  laplace_spatial_filter.hpp  level_reconstructor.hpp  pyramid.hpp  reconstructor.hpp  spatial_filter.hpp  subscriber.hpp  subscription.hpp  temporal_filter.hpp  video_subscriber.hpp
lib/evm/src/: CMakeLists.txt  color_converter.cpp  evm.cpp
lib/evm/src/capture/: CMakeLists.txt  capture.cpp  device_source.cpp  selector.cpp  source.cpp  stabilizer.cpp
lib/evm/src/evm/: CMakeLists.txt  amplifier.cpp  display_subscriber.cpp  evm.cpp  gaussian_pyramid.cpp  gaussian_spatial_filter.cpp  ideal_bandpass_temporal_filter.cpp  laplace_pyramid.cpp  laplace_spatial_filter.cpp  level_reconstructor.cpp  pyramid.cpp  reconstructor.cpp  subscription.cpp  video_subscriber.cpp
test/: CMakeLists.txt
test/evm/: CMakeLists.txt
test/evm/src/: CMakeLists.txt  environment.cpp  environment.hpp  evm_test.cpp  main.cpp
